--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"forward\""
+    "# !python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"forward\""
    ]
   },
   {
@@ -343,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"backward\""
+    "# !python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"backward\""
    ]
   },
   {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -381,14 +381,14 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
-      "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
+      "platform linux -- Python 3.12.4, pytest-8.2.2, pluggy-1.5.0\n",
+      "rootdir: /home/wxj/repo/CMU10-414/hw/hw1\n",
+      "plugins: anyio-4.4.0\n",
+      "collected 24 items / 23 deselected / 1 selected                                \u001b[0m\u001b[1m\n",
       "\n",
-      "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.43s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m23 deselected\u001b[0m\u001b[32m in 2.83s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -408,7 +408,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"topo_sort\""
+    "# !python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"topo_sort\""
    ]
   },
   {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -452,14 +452,14 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
-      "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
+      "platform linux -- Python 3.12.4, pytest-8.2.2, pluggy-1.5.0\n",
+      "rootdir: /home/wxj/repo/CMU10-414/hw/hw1\n",
+      "plugins: anyio-4.4.0\n",
+      "collected 24 items / 23 deselected / 1 selected                                \u001b[0m\n",
       "\n",
-      "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.47s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m23 deselected\u001b[0m\u001b[32m in 0.41s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -479,7 +479,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"compute_gradient\""
+    "# !python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"compute_gradient\""
    ]
   },
   {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -527,14 +527,14 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
-      "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
+      "platform linux -- Python 3.12.4, pytest-8.2.2, pluggy-1.5.0\n",
+      "rootdir: /home/wxj/repo/CMU10-414/hw/hw1\n",
+      "plugins: anyio-4.4.0\n",
+      "collected 24 items / 23 deselected / 1 selected                                \u001b[0m\n",
       "\n",
-      "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.69s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m23 deselected\u001b[0m\u001b[32m in 0.67s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -554,7 +554,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"softmax_loss_ndl\""
+    "# !python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"softmax_loss_ndl\""
    ]
   },
   {
@@ -615,7 +615,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_epoch_ndl\""
+    "# !python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_epoch_ndl\""
    ]
   }
  ],
@@ -626,7 +626,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "10414",
    "language": "python",
    "name": "python3"
   },
